--- a/checklist.yml
+++ b/checklist.yml
@@ -1,5 +1,5 @@
 #########################################################
-# Prepares local envoriment for running this repo
+# Prepares local environment for running this repo
 #########################################################
 ---
 - hosts: localhost
