--- a/digitalocean.yml
+++ b/digitalocean.yml
@@ -13,7 +13,7 @@ keyed_groups:
     prefix: ""
     separator: ""
 compose:
-  ansible_host: do_networks.v4 | selectattr('type','eq','private') | map(attribute='ip_address') | first
+  ansible_host: do_networks.v4 | selectattr('type','eq','public') | map(attribute='ip_address') | first
   ansible_user: "'ansible'"
   ansible_ssh_common_args: "'-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'"
 filters:
